--- a/web/src/app/pages/clerk/clerk/clerk.component.html
+++ b/web/src/app/pages/clerk/clerk/clerk.component.html
@@ -1,1 +1,19 @@
-<p>clerk works!</p>
+<!-- This is an example component -->
+<div>
+    <app-navbar (toggleSidebar)="togglSideBar($event)"></app-navbar>
+    <div class="flex overflow-hidden bg-white pt-16">
+        <app-clerk-sidebar (onHeadingChanged)="changeHeading($event)" hidden="{{sideBarHide}}"></app-clerk-sidebar>
+        <div id="main-content" class="h-full w-full bg-gray-50 relative overflow-y-auto lg:ml-64">
+            <main>
+                <div class="mx-5 mt-6">
+                    <div class="text-3xl">{{heading}}</div>
+                    <div class="text-gray-500">Clerk / {{heading}}</div>
+                 </div>
+                <router-outlet></router-outlet>
+            </main>
+            <app-footer></app-footer>
+        </div>
+    </div>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <script src="https://demo.themesberg.com/windster/app.bundle.js"></script>
+</div>
