--- a/web/src/app/pages/principal/add-class/add-class.component.html
+++ b/web/src/app/pages/principal/add-class/add-class.component.html
@@ -1,5 +1,10 @@
-<div class="mx-2 md:mx-5 bg-white p-3 mt-3 shadow-md overflow-x-auto">
-    <!-- add class tailwind css input fields -->
+<div class="mx-2 mt-6 md:mx-5 bg-white p-3 rounded-lg shadow-md overflow-x-auto">
+    <div class="mb-4 flex items-center justify-between">
+        <div>
+            <h3 class="text-xl font-bold text-gray-900 mb-2">Add Class</h3>
+            <span class="text-base font-normal text-gray-500">You can add a new class into school from here.</span>
+        </div>
+    </div>
     <div class="flex flex-col">
         <div class="flex flex-row">
             <div class="flex flex-col w-1/2">
@@ -8,44 +13,8 @@
                     class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
             </div>
             <div class="flex flex-col w-1/2 ml-2">
-                <label for="description" class="text-gray-700">Description</label>
-                <input type="text" name="description" id="description"
-                    class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
-            </div>
-        </div>
-        <div class="flex flex-row mt-2">
-            <div class="flex flex-col w-1/2">
-                <label for="students" class="text-gray-700">Students</label>
-                <input type="number" name="students" id="students"
-                    class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
-            </div>
-            <div class="flex flex-col w-1/2 ml-2">
                 <label for="fee" class="text-gray-700">Fee/Student</label>
                 <input type="number" name="fee" id="fee"
-                    class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
-            </div>
-        </div>
-        <div class="flex flex-row mt-2">
-            <div class="flex flex-col w-1/2">
-                <label for="start_date" class="text-gray-700">Start Date</label>
-                <input type="date" name="start_date" id="start_date"
-                    class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
-            </div>
-            <div class="flex flex-col w-1/2 ml-2">
-                <label for="end_date" class="text-gray-700">End Date</label>
-                <input type="date" name="end_date" id="end_date"
-                    class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
-            </div>
-        </div>
-        <div class="flex flex-row mt-2">
-            <div class="flex flex-col w-1/2">
-                <label for="start_time" class="text-gray-700">Start Time</label>
-                <input type="time" name="start_time" id="start_time"
-                    class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
-            </div>
-            <div class="flex flex-col w-1/2 ml-2">
-                <label for="end_time" class="text-gray-700">End Time</label>
-                <input type="time" name="end_time" id="end_time"
                     class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
             </div>
         </div>
@@ -83,39 +52,10 @@
                 </select>
             </div>
         </div>
-
         <div class="flex flex-row mt-2">
-            <div class="flex flex-col w-1/2">
-                <label for="image" class="text-gray-700">Image</label>
-                <input type="file" name="image" id="image"
-                    class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
-            </div>
-        </div>
-        <div class="flex flex-row mt-2">
-            <div class="flex flex-col w-1/2">
-                <label for="video" class="text-gray-700">Video</label>
-                <input type="file" name="video" id="video"
-                    class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
-            </div>
-        </div>
-        <div class="flex flex-row mt-2">
-            <div class="flex flex-col w-1/2">
-                <label for="audio" class="text-gray-700">Audio</label>
-                <input type="file" name="audio" id="audio"
-                    class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
-            </div>
-        </div>
-        <div class="flex flex-row mt-2">
-            <div class="flex flex-col w-1/2">
+            <div class="flex flex-col w-full">
                 <label for="description" class="text-gray-700">Description</label>
                 <textarea name="description" id="description" rows="3"
-                    class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent"></textarea>
-            </div>
-        </div>
-        <div class="flex flex-row mt-2">
-            <div class="flex flex-col w-1/2">
-                <label for="notes" class="text-gray-700">Notes</label>
-                <textarea name="notes" id="notes" rows="3"
                     class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent"></textarea>
             </div>
         </div>
