--- a/web/src/app/pages/principal/applications/applications.component.html
+++ b/web/src/app/pages/principal/applications/applications.component.html
@@ -1,3 +1,5 @@
+<app-alert [isHidden]=isAlertHidden message="{{alertMessage}}" type="{{alertType}}" (close)="handleAlertClose($event)">
+</app-alert>
 <!-- create table in tailwind css -->
 <div class="bg-white mx-4 mt-6 shadow rounded-lg p-4 sm:p-6 xl:p-8 ">
     <div class="mb-4 flex items-center justify-between">
@@ -41,9 +43,9 @@
                         </thead>
                         <tbody class="bg-white">
                             <ng-container *ngIf="applications.length > 0;">
-                                <tr *ngFor="let application of applications">
+                                <tr *ngFor="let application of applications; let i=index">
                                     <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-900">
-                                        {{ application.no }}
+                                        {{ i + 1 }}
                                     </td>
                                     <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
                                         {{ application.name }}
@@ -55,17 +57,20 @@
                                         {{ application.role }}
                                     </td>
                                     <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
-                                        {{ application.date }}
+                                        {{ getDate(application.date) }}
                                     </td>
                                     <!-- view and accept button -->
                                     <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
-                                        <button class="text-gray-400 hover:text-indigo-500 font-bold py-2 px-4 rounded">
+                                        <button class="text-gray-400 hover:text-indigo-500 font-bold py-2 px-4 rounded"
+                                            (click)="handleViewClick(application.email, application.description)">
                                             <i class="fa-solid fa-eye"></i>
                                         </button>
-                                        <button class="text-gray-400 hover:text-green-500 font-bold py-2 px-4 rounded">
+                                        <button class="text-gray-400 hover:text-green-500 font-bold py-2 px-4 rounded"
+                                            (click)="acceptApplication(application.email)">
                                             <i class="fa-solid fa-check"></i>
                                         </button>
-                                        <button class="text-gray-400 hover:text-red-500 font-bold py-2 px-4 rounded">
+                                        <button class="text-gray-400 hover:text-red-500 font-bold py-2 px-4 rounded"
+                                            (click)="regectApplication(application.email)">
                                             <i class="fa-solid fa-xmark"></i>
                                         </button>
                                     </td>
@@ -86,3 +91,6 @@
         </div>
     </div>
 </div>
+
+<!-- tailwind css model -->
+<app-model Title={{modelTitle}} Message={{modelMsg}} isHidden={{isModelHidden}} (onClose)="closeModel()"></app-model>
