--- a/web/src/app/pages/home/home.component.html
+++ b/web/src/app/pages/home/home.component.html
@@ -123,7 +123,7 @@
   
   <!-- show profile  of principal -->
   <div class="bg-white">
-    <div class="mt-20 max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
+    <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
       <div class="mt-10">
         <ul class="md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-10">
           <li>
