--- a/web/src/app/pages/principal/applications/applications.component.html
+++ b/web/src/app/pages/principal/applications/applications.component.html
@@ -78,9 +78,9 @@
                             </ng-container>
                             <ng-container *ngIf="applications.length === 0;">
                                 <tr>
-                                    <td colspan="5"
+                                    <td colspan="6"
                                         class="p-4 text-center whitespace-nowrap text-sm font-normal text-gray-900">
-                                        No applications found
+                                        No application found
                                     </td>
                                 </tr>
                             </ng-container>
