--- a/web/src/app/pages/principal/classes/classes.component.html
+++ b/web/src/app/pages/principal/classes/classes.component.html
@@ -46,9 +46,9 @@
                         </thead>
                         <tbody class="bg-white">
                             <ng-container *ngIf="classes.length > 0;">
-                                <tr *ngFor="let class of classes">
+                                <tr *ngFor="let class of classes; let i = index;">
                                     <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-900">
-                                        {{ class.no }}
+                                        {{ i+1 }}
                                     </td>
                                     <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
                                         {{ class.name }}
