--- a/web/src/app/pages/principal/principal-sidebar/principal-sidebar.component.html
+++ b/web/src/app/pages/principal/principal-sidebar/principal-sidebar.component.html
@@ -96,7 +96,7 @@
                   <a routerLink="/principal/fees" (click)="changeHeading('Fees')"
                      class="{{heading==='Fees'? 'bg-indigo-500 hover:bg-indigo-600 text-white':'bg-white hover:bg-gray-100 text-gray-500 hover:text-gray-900'}} text-base font-normal rounded-lg flex items-center p-2 group">
                      <div class="w-6 h-6 transition duration-75">
-                        <i class="fa-solid fa-money-check-dollar"></i>
+                        <i class="fa-solid fa-file-invoice"></i>
                      </div>
                      <span class="ml-3 flex-1 whitespace-nowrap">Fees</span>
                   </a>
