--- a/web/src/app/pages/principal/teachers/teachers.component.html
+++ b/web/src/app/pages/principal/teachers/teachers.component.html
@@ -1,1 +1,93 @@
-<p>teachers works!</p>
+<!-- create table in tailwind css -->
+<div class="bg-white mx-4 mt-6 shadow rounded-lg p-4 sm:p-6 xl:p-8 ">
+    <div class="mb-4 flex items-center justify-between">
+        <div>
+            <h3 class="text-xl font-bold text-gray-900 mb-2">Our Teachers</h3>
+            <span class="text-base font-normal text-gray-500">This is a list of our beloved teachers.</span>
+        </div>
+        <div>
+            <a routerLink="add" class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">
+                Add new teacher
+            </a>
+        </div>
+    </div>
+    <div class="flex flex-col mt-8">
+        <div class="overflow-x-auto rounded-lg">
+            <div class="align-middle inline-block min-w-full">
+                <div class="shadow overflow-hidden sm:rounded-lg">
+                    <table class="min-w-full divide-y divide-gray-200">
+                        <thead class="bg-gray-50">
+                            <tr>
+                                <th scope="col"
+                                    class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    No
+                                </th>
+                                <th scope="col"
+                                    class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    Name
+                                </th>
+                                <th scope="col"
+                                    class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    Email
+                                </th>
+                                <th scope="col"
+                                    class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    Salary
+                                </th>
+                                <th scope="col"
+                                    class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    Applied Date
+                                </th>
+                                <th scope="col"
+                                    class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    Actions
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody class="bg-white">
+                            <ng-container *ngIf="teachers.length > 0;">
+                                <tr *ngFor="let teacher of teachers; let i = index">
+                                    <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-900">
+                                        {{ i + 1 }}
+                                    </td>
+                                    <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                        {{ teacher.name }}
+                                    </td>
+                                    <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                        {{ teacher.email }}
+                                    </td>
+                                    <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                        {{ teacher.salary }}
+                                    </td>
+                                    <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                        {{ teacher.date }}
+                                    </td>
+                                    <!-- view and accept button -->
+                                    <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                        <button class="text-gray-400 hover:text-indigo-500 font-bold py-2 px-4 rounded">
+                                            <i class="fa-solid fa-eye"></i>
+                                        </button>
+                                        <button class="text-gray-400 hover:text-green-500 font-bold py-2 px-4 rounded">
+                                            <i class="fa-solid fa-check"></i>
+                                        </button>
+                                        <button class="text-gray-400 hover:text-red-500 font-bold py-2 px-4 rounded">
+                                            <i class="fa-solid fa-xmark"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                            </ng-container>
+                            <ng-container *ngIf="teachers.length === 0;">
+                                <tr>
+                                    <td colspan="6"
+                                        class="p-4 text-center whitespace-nowrap text-sm font-normal text-gray-900">
+                                        No teacher found
+                                    </td>
+                                </tr>
+                            </ng-container>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
