--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -22,7 +22,7 @@
 }
 
 .btn-primary {
-  @apply bg-indigo-600 hover:bg-indigo-700 text-white disabled:hover:bg-indigo-600;
+  @apply bg-indigo-500 hover:bg-indigo-600 text-white disabled:hover:bg-indigo-500;
 }
 
 .btn-success {
@@ -31,6 +31,10 @@
 
 .btn-danger {
   @apply bg-red-600 hover:bg-red-700 text-white disabled:hover:bg-red-600;
+}
+
+.btn-secondary {
+  @apply bg-gray-600 hover:bg-gray-700 text-white disabled:hover:bg-gray-600;
 }
 
 .form-control {
